kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-%pullRequest%
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      component: api-%pullRequest%
  template:
    metadata:
      labels:
        component: api-%pullRequest%
    spec:
      containers:
        -   name: api-%pullRequest%
            image: glooby5/k8s-multi:%pullRequest%
            imagePullPolicy: Always
            ports:
              - containerPort: 3001
