kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: api
  ports:
    -   protocol: TCP
        port: 3001
        targetPort: 3001
