kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-test-ingress-%pullRequest%
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - path: /test%pullRequest%
        pathType: Prefix
        backend:
          service: 
            name: api-cluster-ip-service-%pullRequest%
            port: 
              number: 3001
